SLCORE-576 - Convert RuleDescription tests in SonarQubeDeveloperEditionTests