@@ -38,11 +38,13 @@ import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Deque;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
+import java.util.concurrent.ConcurrentLinkedDeque;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
@@ -97,8 +99,10 @@ import org.sonarsource.sonarlint.core.rpc.protocol.backend.rules.RuleDescription
 import org.sonarsource.sonarlint.core.rpc.protocol.backend.tracking.ListAllParams;
 import org.sonarsource.sonarlint.core.rpc.protocol.backend.tracking.TaintVulnerabilityDto;
 import org.sonarsource.sonarlint.core.rpc.protocol.client.taint.vulnerability.DidChangeTaintVulnerabilitiesParams;
+import org.sonarsource.sonarlint.core.rpc.protocol.client.sync.DidSynchronizeConfigurationScopeParams;
 import org.sonarsource.sonarlint.core.rpc.protocol.common.CleanCodeAttribute;
 import org.sonarsource.sonarlint.core.rpc.protocol.common.ImpactSeverity;
+import org.sonarsource.sonarlint.core.rpc.protocol.client.sync.DidSynchronizeConfigurationScopeParams;
 import org.sonarsource.sonarlint.core.rpc.protocol.common.Language;
 import org.sonarsource.sonarlint.core.rpc.protocol.common.SoftwareQuality;
 import org.sonarsource.sonarlint.core.rpc.protocol.common.TokenDto;
@@ -116,6 +120,7 @@ import static org.apache.commons.lang3.StringUtils.abbreviate;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.entry;
 import static org.assertj.core.api.Assertions.tuple;
+import static org.awaitility.Awaitility.await;
 import static org.awaitility.Awaitility.waitAtMost;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -157,6 +162,7 @@ class SonarQubeDeveloperEditionTests extends AbstractConnectedTests {
   private static Path sonarUserHome;
 
   private static final List<DidChangeTaintVulnerabilitiesParams> didChangeTaintVulnerabilitiesEvents = new CopyOnWriteArrayList<>();
+  private static final List<String> didSynchronizeConfigurationScopes = new CopyOnWriteArrayList<>();
 
   @BeforeAll
   static void start() throws IOException {
@@ -172,10 +178,15 @@ class SonarQubeDeveloperEditionTests extends AbstractConnectedTests {
     backend = clientLauncher.getServerProxy();
     try {
       backend.initialize(
-        new InitializeParams(IT_CLIENT_INFO, IT_TELEMETRY_ATTRIBUTES, new FeatureFlagsDto(false, true, false, false, false, true, true), sonarUserHome.resolve("storage"),
-          sonarUserHome.resolve("workDir"), Collections.emptySet(), Collections.emptyMap(), Set.of(Language.JAVA), Collections.emptySet(),
-          List.of(new SonarQubeConnectionConfigurationDto(CONNECTION_ID, ORCHESTRATOR.getServer().getUrl(), true)), Collections.emptyList(), sonarUserHome.toString(), Map.of(),
-          false))
+          new InitializeParams(IT_CLIENT_INFO, IT_TELEMETRY_ATTRIBUTES, new FeatureFlagsDto(false, true, true, false, false, true, true),
+            sonarUserHome.resolve("storage"),
+            sonarUserHome.resolve("workDir"),
+            Collections.emptySet(), Collections.emptyMap(), Set.of(Language.JAVA), Collections.emptySet(),
+            List.of(new SonarQubeConnectionConfigurationDto(CONNECTION_ID, ORCHESTRATOR.getServer().getUrl(), true),
+              new SonarQubeConnectionConfigurationDto(CONNECTION_ID_WRONG_CREDENTIALS, ORCHESTRATOR.getServer().getUrl(), true)),
+            Collections.emptyList(),
+            sonarUserHome.toString(),
+            Map.of(), false))
         .get();
     } catch (Exception e) {
       throw new IllegalStateException("Cannot initialize the backend", e);
@@ -467,7 +478,6 @@ class SonarQubeDeveloperEditionTests extends AbstractConnectedTests {
           .setParam("template_key", javaRuleKey("S2253"));
       }
 
-      ;
       try (var response = adminWsClient.wsConnector().call(request)) {
         assertTrue(response.isSuccessful());
       }
@@ -605,9 +615,7 @@ class SonarQubeDeveloperEditionTests extends AbstractConnectedTests {
         .setConnectionId(CONNECTION_ID)
         .setSonarLintUserHome(sonarUserHome)
         .addEnabledLanguage(org.sonarsource.sonarlint.core.commons.Language.JAVA)
-        .setLogOutput((msg, level) -> {
-          System.out.println(msg);
-        })
+        .setLogOutput((msg, level) -> System.out.println(msg))
         .build();
       engine = new ConnectedSonarLintEngineImpl(globalConfig);
 
@@ -1000,9 +1008,7 @@ class SonarQubeDeveloperEditionTests extends AbstractConnectedTests {
         .setConnectionId(CONNECTION_ID)
         .setSonarLintUserHome(sonarUserHome)
         .addEnabledLanguage(org.sonarsource.sonarlint.core.commons.Language.JAVA)
-        .setLogOutput((msg, level) -> {
-          System.out.println(msg);
-        })
+        .setLogOutput((msg, level) -> System.out.println(msg))
         .setExtraProperties(globalProps);
       if (!info.getTags().contains(HOTSPOT_FEATURE_DISABLED)) {
         globalConfigBuilder.enableHotspots();
@@ -1149,41 +1155,27 @@ class SonarQubeDeveloperEditionTests extends AbstractConnectedTests {
 
   @Nested
   class RuleDescription {
-    private ConnectedSonarLintEngine engine;
 
     @BeforeEach
     void start() {
-      var globalConfig = ConnectedGlobalConfiguration.sonarQubeBuilder()
-        .setConnectionId(CONNECTION_ID)
-        .setSonarLintUserHome(sonarUserHome)
-        .addEnabledLanguage(org.sonarsource.sonarlint.core.commons.Language.JAVA)
-        .setLogOutput((msg, level) -> {
-          System.out.println(msg);
-        })
-        .build();
-      engine = new ConnectedSonarLintEngineImpl(globalConfig);
-    }
-
-    @AfterEach
-    void stop() throws ExecutionException, InterruptedException {
-      engine.stop(true);
+      didSynchronizeConfigurationScopes.clear();
     }
 
     @Test
     void shouldFailIfNotAuthenticated() {
       var projectKey = "noAuth";
-      provisionProject(ORCHESTRATOR, projectKey, "Sample Javascript");
+      var projectName = "Sample Javascript";
+      provisionProject(ORCHESTRATOR, projectKey, projectName);
       ORCHESTRATOR.getServer().restoreProfile(FileLocation.ofClasspath("/java-sonarlint.xml"));
       ORCHESTRATOR.getServer().associateProjectToQualityProfile(projectKey, "java", "SonarLint IT Java");
-      updateProject(engine, projectKey);
+      backend.getConfigurationService().didAddConfigurationScopes(new DidAddConfigurationScopesParams(
+        List.of(new ConfigurationScopeDto(CONFIG_SCOPE_ID, null, true, projectName, new BindingConfigurationDto(CONNECTION_ID_WRONG_CREDENTIALS, projectKey, true)))));
 
       adminWsClient.settings().set(new SetRequest().setKey("sonar.forceAuthentication").setValue("true"));
       try {
         var ex = assertThrows(ExecutionException.class,
-          () -> engine
-            .getActiveRuleDetails(endpointParams(ORCHESTRATOR), serverLauncher.getJavaImpl().getHttpClient(CONNECTION_ID_WRONG_CREDENTIALS), javaRuleKey("S106"), projectKey)
-            .get());
-        assertThat(ex.getCause()).hasMessage("Not authorized. Please check server credentials.");
+          () -> backend.getRulesService().getEffectiveRuleDetails(new GetEffectiveRuleDetailsParams(CONFIG_SCOPE_ID, javaRuleKey("S106"), null)).get());
+        assertThat(ex.getCause()).hasMessage("Could not find rule 'java:S106' in plugins loaded from '" + CONNECTION_ID_WRONG_CREDENTIALS + "'");
       } finally {
         adminWsClient.settings().reset(new ResetRequest().setKeys(List.of("sonar.forceAuthentication")));
       }
@@ -1192,15 +1184,10 @@ class SonarQubeDeveloperEditionTests extends AbstractConnectedTests {
     @Test
     void shouldContainExtendedDescription() throws Exception {
       var projectKey = "project-with-extended-description";
-
-      provisionProject(ORCHESTRATOR, projectKey, "Project With Extended Description");
+      var projectName = "Project With Extended Description";
+      provisionProject(ORCHESTRATOR, projectKey, projectName);
       ORCHESTRATOR.getServer().restoreProfile(FileLocation.ofClasspath("/java-sonarlint.xml"));
       ORCHESTRATOR.getServer().associateProjectToQualityProfile(projectKey, "java", "SonarLint IT Java");
-      updateProject(engine, projectKey);
-
-      assertThat(engine.getActiveRuleDetails(endpointParams(ORCHESTRATOR), serverLauncher.getJavaImpl().getHttpClient(CONNECTION_ID), javaRuleKey("S106"), projectKey).get()
-        .getExtendedDescription())
-          .isEmpty();
 
       var extendedDescription = " = Title\n*my dummy extended description*";
 
@@ -1218,35 +1205,46 @@ class SonarQubeDeveloperEditionTests extends AbstractConnectedTests {
         // For some reason, there is an extra line break in the generated HTML
         expected = "<h1>Title\n</h1><strong>my dummy extended description</strong>";
       }
-      assertThat(engine.getActiveRuleDetails(endpointParams(ORCHESTRATOR), serverLauncher.getJavaImpl().getHttpClient(CONNECTION_ID), javaRuleKey("S106"), projectKey).get()
-        .getExtendedDescription())
-          .isEqualTo(expected);
+
+      backend.getConfigurationService().didAddConfigurationScopes(new DidAddConfigurationScopesParams(
+        List.of(new ConfigurationScopeDto(CONFIG_SCOPE_ID, null, true, projectName, new BindingConfigurationDto(CONNECTION_ID, projectKey, true)))));
+
+      await().untilAsserted(() -> assertThat(didSynchronizeConfigurationScopes).isNotEmpty());
+
+      var ruleDetailsResponse = backend.getRulesService().getEffectiveRuleDetails(new GetEffectiveRuleDetailsParams(CONFIG_SCOPE_ID, javaRuleKey("S106"), null)).get();
+      var ruleTabs = ruleDetailsResponse.details().getDescription().getRight().getTabs();
+      assertThat(ruleTabs.get(ruleTabs.size() -1).getContent().getLeft().getHtmlContent()).contains(expected);
     }
 
     @Test
     void shouldSupportsMarkdownDescription() throws Exception {
       var projectKey = "project-with-markdown-description";
-
-      provisionProject(ORCHESTRATOR, projectKey, "Project With Markdown Description");
+      var projectName = "Project With Markdown Description";
+      provisionProject(ORCHESTRATOR, projectKey, projectName);
       ORCHESTRATOR.getServer().restoreProfile(FileLocation.ofClasspath("/java-sonarlint-with-markdown.xml"));
       ORCHESTRATOR.getServer().associateProjectToQualityProfile(projectKey, "java", "SonarLint IT Java Markdown");
-      updateProject(engine, projectKey);
+      backend.getConfigurationService().didAddConfigurationScopes(new DidAddConfigurationScopesParams(
+        List.of(new ConfigurationScopeDto(CONFIG_SCOPE_ID, null, true, projectName, new BindingConfigurationDto(CONNECTION_ID, projectKey, true)))));
 
-      assertThat(engine.getActiveRuleDetails(endpointParams(ORCHESTRATOR), serverLauncher.getJavaImpl().getHttpClient(CONNECTION_ID), "mycompany-java:markdown", projectKey).get()
-        .getHtmlDescription())
-          .isEqualTo("<h1>Title</h1><ul><li>one</li>\n"
-            + "<li>two</li></ul>");
+      await().untilAsserted(() -> assertThat(didSynchronizeConfigurationScopes).isNotEmpty());
+
+      var ruleDetailsResponse =
+        backend.getRulesService().getEffectiveRuleDetails(new GetEffectiveRuleDetailsParams(CONFIG_SCOPE_ID, "mycompany-java:markdown",
+          null)).get();
+
+      assertThat(ruleDetailsResponse.details().getDescription().getLeft().getHtmlContent())
+        .isEqualTo("<h1>Title</h1><ul><li>one</li>\n"
+          + "<li>two</li></ul>");
     }
 
     @Test
     void shouldReturnAllContextsWithOthersSelectedIfNoContextProvided() throws ExecutionException, InterruptedException {
       var projectKey = "sample-java-taint-new-backend";
 
-      provisionProject(ORCHESTRATOR, projectKey, "Java With Taint Vulnerabilities");
-      // sync is still done by the engine for now
-      updateProject(engine, projectKey);
+      var projectName = "Java With Taint Vulnerabilities";
+      provisionProject(ORCHESTRATOR, projectKey, projectName);
       backend.getConfigurationService().didAddConfigurationScopes(new DidAddConfigurationScopesParams(
-        List.of(new ConfigurationScopeDto(CONFIG_SCOPE_ID, null, true, "Project", new BindingConfigurationDto(CONNECTION_ID, projectKey, false)))));
+        List.of(new ConfigurationScopeDto(CONFIG_SCOPE_ID, null, true, projectName, new BindingConfigurationDto(CONNECTION_ID, projectKey, true)))));
 
       var activeRuleDetailsResponse = backend.getRulesService().getEffectiveRuleDetails(new GetEffectiveRuleDetailsParams(CONFIG_SCOPE_ID, "javasecurity:S2083", null)).get();
 
@@ -1283,8 +1281,6 @@ class SonarQubeDeveloperEditionTests extends AbstractConnectedTests {
       var projectKey = "sample-java-taint-rule-context-new-backend";
 
       provisionProject(ORCHESTRATOR, projectKey, "Java With Taint Vulnerabilities And Multiple Contexts");
-      // sync is still done by the engine for now
-      updateProject(engine, projectKey);
       backend.getConfigurationService().didAddConfigurationScopes(new DidAddConfigurationScopesParams(
         List.of(new ConfigurationScopeDto(CONFIG_SCOPE_ID, null, true, "Project", new BindingConfigurationDto(CONNECTION_ID, projectKey, false)))));
 
@@ -1335,8 +1331,6 @@ class SonarQubeDeveloperEditionTests extends AbstractConnectedTests {
       var projectKey = "sample-java-hotspot-new-backend";
 
       provisionProject(ORCHESTRATOR, projectKey, "Java With Security Hotspots");
-      updateProject(engine, projectKey);
-
       backend.getConfigurationService().didAddConfigurationScopes(new DidAddConfigurationScopesParams(
         List.of(new ConfigurationScopeDto(CONFIG_SCOPE_ID, null, true, "Project", new BindingConfigurationDto(CONNECTION_ID, projectKey, false)))));
 
@@ -1448,6 +1442,11 @@ class SonarQubeDeveloperEditionTests extends AbstractConnectedTests {
         List<TaintVulnerabilityDto> updatedTaintVulnerabilities) {
         didChangeTaintVulnerabilitiesEvents
           .add(new DidChangeTaintVulnerabilitiesParams(configurationScopeId, closedTaintVulnerabilityIds, addedTaintVulnerabilities, updatedTaintVulnerabilities));
+      }
+
+      @Override
+      public void didSynchronizeConfigurationScopes(DidSynchronizeConfigurationScopeParams params) {
+        didSynchronizeConfigurationScopes.add(params.getConfigurationScopeIds().toString());
       }
     };
   }
